Put comma in right place

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "yarn tinacms server:start -c \"next dev\"",
     "build": "yarn tinacms server:start -c \"next build\"",
-    "start": "yarn tinacms server:start -c \"next start\""
+    "start": "yarn tinacms server:start -c \"next start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,5 +18,5 @@
   "devDependencies": {
     "@tinacms/cli": "^1.5.46",
     "@types/node": "^20.14.6"
-  },
+  }
 }
